--- a/README.me
+++ b/README.me
@@ -1,1 +1,35 @@
-#Welcome to my UI Design portfolio repository! Here, I showcase some of the UI design projects I've worked on. From web interfaces to mobile applications, each project represents my passion for creating intuitive and visually appealing user experiences.
+Welcome to my UI Design portfolio repository! Here, I showcase some of the UI design projects I've worked on. From web interfaces to mobile applications, 
+each project represents my passion for creating intuitive and visually appealing user experiences.
+
+Projetcs
+
+2021
+
+Delinea Edtech - Deduca
+
+Suggestion Center Desktop version = https://www.figma.com/design/EqaL9fUeI6LFi3o0MokSDb/Central-de-Sugest%C3%B5es---Deduca?node-id=0%3A1&t=cttGx8gyVmEDSZUI-1
+Suggestion Center Mobile version = https://www.figma.com/design/EqaL9fUeI6LFi3o0MokSDb/Central-de-Sugest%C3%B5es---Deduca?node-id=43%3A1155&t=cttGx8gyVmEDSZUI-1
+
+User search by profession (Talent Page) = https://www.figma.com/design/PiFkTQuryEbuv1jjGZyrom/Talentos---%5BDeduca%5D?node-id=2%3A22&t=Irc9y2whxHXaNElT-1
+
+Educational content management = https://www.figma.com/design/rkPI9UEJdLYdWOkPg3Zjn9/Gest%C3%A3o-de-Conte%C3%BAdo---%5BDeduca%5D?node-id=2%3A22&t=dsvv4MOeggG0YBA2-1
+
+Job Opportunity creation page = https://www.figma.com/design/mP09D6LgWmWfupFHZZNwl1/Oportunidades---%5BDeduca%5D?node-id=2%3A22&t=mvP5j54nPwUALVGP-1
+
+Create colletion of content = https://www.figma.com/design/3zfnxlk5Zo9yXN13smV0yS/Cole%C3%A7%C3%A3o---%5BDeduca%5D?node-id=2%3A22&t=31k1tRbNxqEC0iQP-1
+
+2022
+
+Delinea Edtech - DStore
+
+
+
+2023
+
+Prova Fácil
+
+autoagendamento = https://www.figma.com/design/is80VdTN9LGL655ICXTgXC/Autoagendamento?node-id=0%3A1&t=7nVhgR894Qzh1XyC-1
+
+cadastro de agendamento = https://www.figma.com/design/ZM3IgLB2UfalGQc3AsP71q/Cadastro-de-Agendamento?node-id=0%3A1&t=7l4Vfed946lb9gxk-1
+
+design system = https://www.figma.com/design/M9wD5NpDKkvf6EqKz1KVEu/Design-System?node-id=7%3A838&t=3PFXmlXrMsNSzeKR-1
