--- a/README.me
+++ b/README.me
@@ -3,7 +3,7 @@ each project represents my passion for creating intuitive and visually appealing
 
 Projetcs
 
-2021
+2020 - 2021
 
 Delinea Edtech - Deduca
 
@@ -21,6 +21,15 @@ Create colletion of content = https://www.figma.com/design/3zfnxlk5Zo9yXN13smV0y
 2022
 
 Delinea Edtech - DStore
+
+Ambiente de locação = https://www.figma.com/design/tWVzRev4nH4bw6DnfaO7Kb/Loca%C3%A7%C3%A3o-Fluxo-Principal---%5BDstore%5D?node-id=2%3A22&t=Rm8J3WCglx7Heb3e-1
+
+Ambiente de aquisição = https://www.figma.com/design/V6G5tHEqenx3vc3ox0pjD1/DStore-Loja?node-id=191%3A4843&t=slNoaS5Qwwcq9qFi-1
+Profile manager = https://www.figma.com/design/SUuHTEm4JcLd4X9ZgJvOED/Perfil-Manager---%5BDstore%5D?node-id=2%3A22&t=UhL0NSuht06Aci7w-1
+User management = https://www.figma.com/design/79Ll4u1h80jkONgXXYx3je/Gerenciamento-de-usu%C3%A1rios---%5BDstore%5D?node-id=201%3A2910&t=eis8Qqy9ZhtQpGZf-1
+Material management = https://www.figma.com/design/tEXapjgtlwnB3njtNSt77B/Gerenciamento-de-Materiais---%5BDstore%5D?node-id=2%3A22&t=y52dyk0I9ncHEjya-1
+create course feature = https://www.figma.com/design/dGbx3HVoaxOMahEbzpeWM3/Feature-de-criar-curso?node-id=0%3A1&t=vIo4X64FouKxK1pS-1
+faturamento = https://www.figma.com/design/vowvWLnc6fIMtXyxFZsdxP/Faturamento---%5BDstore%5D?node-id=201%3A2910&t=GjGHK80sjmtECuH2-1
 
 
 
