--- a/README.me
+++ b/README.me
@@ -30,8 +30,8 @@ User management = https://www.figma.com/design/79Ll4u1h80jkONgXXYx3je/Gerenciame
 Material management = https://www.figma.com/design/tEXapjgtlwnB3njtNSt77B/Gerenciamento-de-Materiais---%5BDstore%5D?node-id=2%3A22&t=y52dyk0I9ncHEjya-1
 create course feature = https://www.figma.com/design/dGbx3HVoaxOMahEbzpeWM3/Feature-de-criar-curso?node-id=0%3A1&t=vIo4X64FouKxK1pS-1
 faturamento = https://www.figma.com/design/vowvWLnc6fIMtXyxFZsdxP/Faturamento---%5BDstore%5D?node-id=201%3A2910&t=GjGHK80sjmtECuH2-1
-
-
+dashboard = https://www.figma.com/design/5pZoR5DKqPkhjyfprVAe8s/Dashboard---%5BDstore%5D?node-id=2%3A22&t=4ZTZbXWBcXCZVSsc-1
+design system = https://www.figma.com/design/ifqok4gBYY61YtARZkus37/%F0%9F%A7%A9-DStore---Design-System?node-id=235%3A1920&t=JKvT8Nwj1ScY0bd7-1
 
 2023
 
