--- a/README.me
+++ b/README.me
@@ -9,13 +9,9 @@ Delinea Edtech - Deduca
 
 Suggestion Center Desktop version = https://www.figma.com/design/EqaL9fUeI6LFi3o0MokSDb/Central-de-Sugest%C3%B5es---Deduca?node-id=0%3A1&t=cttGx8gyVmEDSZUI-1
 Suggestion Center Mobile version = https://www.figma.com/design/EqaL9fUeI6LFi3o0MokSDb/Central-de-Sugest%C3%B5es---Deduca?node-id=43%3A1155&t=cttGx8gyVmEDSZUI-1
-
 User search by profession (Talent Page) = https://www.figma.com/design/PiFkTQuryEbuv1jjGZyrom/Talentos---%5BDeduca%5D?node-id=2%3A22&t=Irc9y2whxHXaNElT-1
-
 Educational content management = https://www.figma.com/design/rkPI9UEJdLYdWOkPg3Zjn9/Gest%C3%A3o-de-Conte%C3%BAdo---%5BDeduca%5D?node-id=2%3A22&t=dsvv4MOeggG0YBA2-1
-
 Job Opportunity creation page = https://www.figma.com/design/mP09D6LgWmWfupFHZZNwl1/Oportunidades---%5BDeduca%5D?node-id=2%3A22&t=mvP5j54nPwUALVGP-1
-
 Create colletion of content = https://www.figma.com/design/3zfnxlk5Zo9yXN13smV0yS/Cole%C3%A7%C3%A3o---%5BDeduca%5D?node-id=2%3A22&t=31k1tRbNxqEC0iQP-1
 
 2022
@@ -23,7 +19,6 @@ Create colletion of content = https://www.figma.com/design/3zfnxlk5Zo9yXN13smV0y
 Delinea Edtech - DStore
 
 Ambiente de locação = https://www.figma.com/design/tWVzRev4nH4bw6DnfaO7Kb/Loca%C3%A7%C3%A3o-Fluxo-Principal---%5BDstore%5D?node-id=2%3A22&t=Rm8J3WCglx7Heb3e-1
-
 Ambiente de aquisição = https://www.figma.com/design/V6G5tHEqenx3vc3ox0pjD1/DStore-Loja?node-id=191%3A4843&t=slNoaS5Qwwcq9qFi-1
 Profile manager = https://www.figma.com/design/SUuHTEm4JcLd4X9ZgJvOED/Perfil-Manager---%5BDstore%5D?node-id=2%3A22&t=UhL0NSuht06Aci7w-1
 User management = https://www.figma.com/design/79Ll4u1h80jkONgXXYx3je/Gerenciamento-de-usu%C3%A1rios---%5BDstore%5D?node-id=201%3A2910&t=eis8Qqy9ZhtQpGZf-1
@@ -38,7 +33,20 @@ design system = https://www.figma.com/design/ifqok4gBYY61YtARZkus37/%F0%9F%A7%A9
 Prova Fácil
 
 autoagendamento = https://www.figma.com/design/is80VdTN9LGL655ICXTgXC/Autoagendamento?node-id=0%3A1&t=7nVhgR894Qzh1XyC-1
-
 cadastro de agendamento = https://www.figma.com/design/ZM3IgLB2UfalGQc3AsP71q/Cadastro-de-Agendamento?node-id=0%3A1&t=7l4Vfed946lb9gxk-1
-
 design system = https://www.figma.com/design/M9wD5NpDKkvf6EqKz1KVEu/Design-System?node-id=7%3A838&t=3PFXmlXrMsNSzeKR-1
+
+Zouti
+
+Design system = https://www.figma.com/design/0m2TBhXwNcFSvflaOmF3OL/%5BZouti%5D---Style-Guide?node-id=1%3A20655&t=tACKrrp2TBHdmBfJ-1
+product list = https://www.figma.com/design/B9IqLwHmhfi6SpDkZj4goH/Produtos?node-id=0%3A1&t=g9nK2WEark5xVy8f-1
+general report = https://www.figma.com/design/WcSSfLfWuQnj2r7FgM8Bvz/Relat%C3%B3rio-Geral?node-id=96%3A1882&t=SOsZ1cA6VIMH2SOx-1
+checkout = https://www.figma.com/design/YPwN5hxL5O1GznOtn8YdvP/Checkout-transparente?node-id=163%3A1149&t=1fBNPs380Qxvjgxc-1
+checkout config = https://www.figma.com/design/Ux8jp21OU4K5AY5wwcJpRF/Checkout?node-id=946%3A4444&t=Wbb5AyOg2a0l3BFQ-1
+configuration = https://www.figma.com/design/NC3u9ILqQicKUtu6NL3hDY/Configura%C3%A7%C3%B5es?node-id=1%3A3&t=cVUVb79Vj9nNVN6K-1
+marketing config = https://www.figma.com/design/JH3NwA5jieB9cUD4MiiFHV/Marketing?node-id=611%3A2131&t=b2EyTXJCr7odqENO-1
+order = https://www.figma.com/design/sNnWQteHei3q8QL0m68iwD/Pedidos?node-id=0%3A1&t=R5LxyPnv3dI1tbgn-1
+
+
+
+
