--- a/README.me
+++ b/README.me
@@ -47,6 +47,10 @@ configuration = https://www.figma.com/design/NC3u9ILqQicKUtu6NL3hDY/Configura%C3
 marketing config = https://www.figma.com/design/JH3NwA5jieB9cUD4MiiFHV/Marketing?node-id=611%3A2131&t=b2EyTXJCr7odqENO-1
 order = https://www.figma.com/design/sNnWQteHei3q8QL0m68iwD/Pedidos?node-id=0%3A1&t=R5LxyPnv3dI1tbgn-1
 
+2023 - 2024
+
+Acerta! Promotora
+
 
 
 
