--- a/README.me
+++ b/README.me
@@ -51,6 +51,6 @@ order = https://www.figma.com/design/sNnWQteHei3q8QL0m68iwD/Pedidos?node-id=0%3A
 
 Acerta! Promotora
 
-
+tela de atendimento = https://www.figma.com/design/p2tkZ15D2k090bIgq9k564/Tela-de-atendimento?node-id=0%3A1&t=xe8X2qyfxLmPZpho-1
 
 
