--- a/README.me
+++ b/README.me
@@ -52,5 +52,8 @@ order = https://www.figma.com/design/sNnWQteHei3q8QL0m68iwD/Pedidos?node-id=0%3A
 Acerta! Promotora
 
 tela de atendimento = https://www.figma.com/design/p2tkZ15D2k090bIgq9k564/Tela-de-atendimento?node-id=0%3A1&t=xe8X2qyfxLmPZpho-1
+consulta de propostas = https://www.figma.com/design/ilUQKWKiCV21igD1Ghs5lk/Consulta-de-propostas?node-id=152%3A715&t=lYo4vlgqgIg7MMtJ-1
+clientes com limite = https://www.figma.com/design/9zLwXTBTNtR3FSeohPPRu6/Clientes-com-limite?node-id=30%3A10867&t=pSYZ1Hp3MONy4UNr-1
+extracao de clientes = https://www.figma.com/design/cbnEdy9pgxOCrQ51EYbkRw/Extra%C3%A7%C3%A3o-de-Clientes?node-id=79%3A2561&t=HQfT3qrDG5zFPiP7-1
 
 
