--- a/README.me
+++ b/README.me
@@ -55,5 +55,12 @@ tela de atendimento = https://www.figma.com/design/p2tkZ15D2k090bIgq9k564/Tela-d
 consulta de propostas = https://www.figma.com/design/ilUQKWKiCV21igD1Ghs5lk/Consulta-de-propostas?node-id=152%3A715&t=lYo4vlgqgIg7MMtJ-1
 clientes com limite = https://www.figma.com/design/9zLwXTBTNtR3FSeohPPRu6/Clientes-com-limite?node-id=30%3A10867&t=pSYZ1Hp3MONy4UNr-1
 extracao de clientes = https://www.figma.com/design/cbnEdy9pgxOCrQ51EYbkRw/Extra%C3%A7%C3%A3o-de-Clientes?node-id=79%3A2561&t=HQfT3qrDG5zFPiP7-1
+fluxo de vendas = https://www.figma.com/design/VDmwqbhjHmSO9vfp038xks/Fluxo-de-vendas?node-id=409%3A15588&t=1FujHydaQeml0Qfw-1
+design system - components = https://www.figma.com/design/7stZu84smWutAwDseRoDwj/ACERTA!-DS----%F0%9F%A7%A9-Components?node-id=1918%3A643&t=S0p2qQuqIB0oxA6H-1
+design system - foundation = https://www.figma.com/design/FvHkI8XVn865pgSCDAYCvm/ACERTA!-DS---%F0%9F%A7%B1-Foundations?node-id=1918%3A643&t=xMIOjbgx6kJLojKx-1
+
+Profitfy
+
+
 
 
