--- a/README.me
+++ b/README.me
@@ -1,4 +1,4 @@
-Welcome to my UI Design portfolio repository! Here, I showcase some of the UI design projects I've worked on. From web interfaces to mobile applications, 
+#Welcome to my UI Design portfolio repository! Here, I showcase some of the UI design projects I've worked on. From web interfaces to mobile applications, 
 each project represents my passion for creating intuitive and visually appealing user experiences.
 
 Projetcs
@@ -58,9 +58,6 @@ extracao de clientes = https://www.figma.com/design/cbnEdy9pgxOCrQ51EYbkRw/Extra
 fluxo de vendas = https://www.figma.com/design/VDmwqbhjHmSO9vfp038xks/Fluxo-de-vendas?node-id=409%3A15588&t=1FujHydaQeml0Qfw-1
 design system - components = https://www.figma.com/design/7stZu84smWutAwDseRoDwj/ACERTA!-DS----%F0%9F%A7%A9-Components?node-id=1918%3A643&t=S0p2qQuqIB0oxA6H-1
 design system - foundation = https://www.figma.com/design/FvHkI8XVn865pgSCDAYCvm/ACERTA!-DS---%F0%9F%A7%B1-Foundations?node-id=1918%3A643&t=xMIOjbgx6kJLojKx-1
-
-Profitfy
-
 
 
 
